# PIAA_Strings

lab5/: CMakeLists.txt  README.txt  build.sh
lab5/hdr/: KMPfunc.hpp
lab5/src/: CheckOperations.cpp  CycleShiftSrch.cpp  KMPfunc.cpp  SubstrSrch.cpp  clean.cpp  clean.sh
lab5/test/: ShiftTest.cpp  SubstrSrchTest.cpp  test.cpp
lab6/: CMakeLists.txt  README.txt  build.sh
lab6/hdr/: BohrTree.hpp  BohrVertex.hpp  libs.hpp
lab6/src/: AKJokerSearch.cpp  AKSearch.cpp  BohrTree.cpp  clean.sh
lab6/test/: AKJokerSearchTest.cpp  AKSearchTest.cpp
